--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -f Dockerfile.dev
+  - docker build -t joaovillas/devopsstudies -f Dockerfile.dev .
+
+script:
+  - docker run joaovillas/devopsstudies npm run test -- --coverage
